--- a/sass/mixins.scss
+++ b/sass/mixins.scss
@@ -1,6 +1,7 @@
 @mixin card{
     display: grid;
     grid-template-rows: repeat(9,1fr);
+    grid-template-columns: 18rem;
     border: 4px green;
     border-radius: 5%;
     border-style: solid;
@@ -8,14 +9,15 @@
     margin: 10px;
     justify-content: center;
     text-align: center;
+    padding: 0px;
 
     img{
         position: relative;
-        left:0.1px ;
+        left:-1.7px ;
         top:0.1px;
         padding: 0px; 
         margin: 0px;
-        width: 18.4rem;
+        width: 18.21rem;
         border-radius: 5%;
         grid-row: 1/4;
     }
@@ -50,11 +52,4 @@
         }
     }
     
-    // button{
-    //     font-size:1.3rem;
-    //     font-weight: 600;
-    //     grid-row: 9/10;
-    //     border-radius: 10%;
-    //     background: #fa824c;
-    // }
 }
